libycp/testsuite/tests/types/type_bitshift.err
[Parser] tests/types/type_bitshift.ycp:2 Missing blank between '>' and '>'
[Parser] tests/types/type_bitshift.ycp:2 syntax error, unexpected SYMBOL, expecting '&' or '>' or RIGHT or '('
runycp: parser error
